# book_zero2prod

./: Cargo.toml  Dockerfile
.sqlx/: query-4d92b354e3429b14f8cad79cc274ff66f12816fc31e6d1037ff0fddbf3cb46ca.json
configuration/: local.yaml  production.yaml
migrations/: 20240320211156_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
