[package]
name = "zero2prod_ldn_live"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version="1.28.2", features=["macros","rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.11"
